Fix map overflowing page.

--- a/src/components/GenericModal/GenericModal.module.scss
+++ b/src/components/GenericModal/GenericModal.module.scss
@@ -30,7 +30,7 @@
   width: 100dvw;
   height: 100dvh;
 
-  padding: var(--twelve-pixel);
+  padding: var(--six-pixel);
 }
 
 .Modal .Button {
